--- a/index.html
+++ b/index.html
@@ -152,10 +152,13 @@ h1, h2, h3, h4, h5, h6 {
   <!-- Contact Section -->
   <div class="w3-container w3-padding-64" id="contact">
     <h1>Contact</h1><br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.0395889507117!2d-71.43641938456112!3d41.80590757922795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e44580e87eee83%3A0xd62bec0ad4e3bf21!2s121%20Waldo%20St%2C%20Providence%2C%20RI%2002907!5e0!3m2!1sen!2sus!4v1578815834370!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
     <p>talk about how to get in contact or something</p>
     <p>instagram? and maybe even facebook</p>
     <p class="w3-text-blue-grey w3-large"><b>121 Waldo St, Providence RI 02907</b></p>
     <p>You can also contact us by phone 00553123-2323 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
+      
    
   </div>
   
