--- a/index.html
+++ b/index.html
@@ -158,7 +158,13 @@ h1, h2, h3, h4, h5, h6 {
     <p class="w3-text-blue-grey w3-large"><b>121 Waldo St, Providence RI 02907</b></p>
     <p>You can also contact us by phone 00553123-2323 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
       
-   
+   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="JQRFVWXK84XXY" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
   </div>
   
 <!-- End page content -->
