--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6 {
       <h1 class="w3-center">Mission</h1><br>
         <h5 class="w3-center"><em><strong>Matthew 5 : 14 - 16</strong></em></h5>
         <p class="w3-large"><em>"14 Vous êtes la lumière du monde. Une ville construite sur une colline ne peut pas être cachée. 15 Les gens n'allument pas non plus une lampe et ne la mettent pas sous un bol. Au lieu de cela, ils l'ont mis sur son support, et il éclaire tout le monde dans la maison. 16 De la même manière, que votre lumière brille devant les autres, afin qu'ils voient vos bonnes actions et glorifient votre Père céleste."</em></p>
-      <p class="w3-large w3-text-grey w3-hide-medium">Someone else is writing this part. for now im just going to put blah blah labh labhh labh labh blah bkah bkah bkagfg eifuhkngn dfon rigjng iojkdbgyuijkd jijnkjdhuil juhoidmg e8e 8nkjn uhgjbd uijdkg ijknme idngnj ijdkgnk iojkdng ojlkgn, oknfg ljnkg joingj nij.</p>
+      <p class="w3-large w3-text-grey w3-hide-medium">We are the light of the world! Tabernacle of Light Church of God is a Christian-based Haitian Church. We welcome all brothers and sisters in Christ regardless of ethnic background. Our goal is to create an environment where the children of God may worship freely, praise, and listen to the word of God. As Christians, we are devoted to creating disciples of Jesus Christ and ministering to their soul’s spiritual needs.</p>
     </div>
   </div>
   
