--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h1, h2, h3, h4, h5, h6 {
     <p>talk about how to get in contact or something</p>
     <p>instagram? and maybe even facebook</p>
     <p class="w3-text-blue-grey w3-large"><b>121 Waldo St, Providence RI 02907</b></p>
-    <p>You can also contact us by phone 00553123-2323 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
+    <p>You can also contact us by phone (401) 572-6224 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
       
    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
