--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@ h1, h2, h3, h4, h5, h6 {
         <figure>
             <img src="https://lh3.googleusercontent.com/n7rtSzcRMBFjyyz0Det2dMRgtHKQAyjWaGYbAQfpU5hpsJlrTVTIX5VRLdlrddj4rsHkTD5Jd7uF_Pmw_he5332jLrADGuNJ1WJTKuHXnsYUKN3avNyAkuthulSlXJJghQgdJf-OEwQJ14N3YQAttH-31TgiNKFepw5EiYHFVTJSpCtcIaDZPRi1d27R7Hvwqw2YAA17EDIIgPzG9EdtwJ7_XgU0nmgDF0MbA2jq7qai3LkJHG4HV-sJtAjD8jOtvQaOV8UbtA-OXs9K-9P8TEHOnMNQsw28nvVTc0t0wHIYvVJOpiE7N3pvCU3Y3tizyEqcfgDLI6uw_mR7-n4er83Nljtjt0bQrFysWG3ar88go_Qcl01C5810fXM-kz9v9qNXqgMcBqri6Tm_CzXQpvTwmyrpUKWDh4W1jlXSF5TdKsK9Fi6bbczC-aojamHD0eKsH8513nleKKHCsdAxr-RB5hRMnoiAuP68x6IuW0SFnH2ysgVb26qP5rMKNmq5v1550MBayFc-xknqSomWL-HkW2MZrHNZxkw6XaXWYLYXlbsGxCssr52OTspoXCsBXGx6UjAa19FdD8h1NL51_0vTy2AkSNCxjHbtX9XzsKEkVhJHLTyY8vVRUUSvo3CMVw1rsrbx6ulxOZzby-hxGBT-Uctwhm1lgIdjAHzh36pcDitqKxHby6Bn28gVwqKVk_SI81YfvU5Lrww2MmEAFIpZ9UljmSOYRfRkBMPfx6m-SW0Z=w1221-h915-no" height="250">
             <img src="https://lh3.googleusercontent.com/0cYV-tkWlp-DW47nDYBwcvT0jjDrVAwDUtHwbuO8_9lIBTXIZiojKaGu2C0ZqeSr2lNJY4NRJZjOMqNlSc80emINU8-FkAJYsozP2eAskirZjiLe7vCtP736UiMGSK_ArDdsaOJXhDr4W1CP6_xcuzURXvKJRMxYw-cPeMRgT7WAOUoyp6y4unw9lRPwC8xRRCebA3wrGNi1gE74o8sVSmFT3VJbA_lsHey-0mCuj-gyeY5svTSanyvZSaO3sFcbkG0aWkL3bPlcCs_ZJr3vSNhWBlQM84T6GoSl4DA8_PGJ7lpwreNBm9cV6QXnp_0X62R6QkIBQqzlgLuZ_p0kFUt9_ChXqZJ5nEfAJMQdgdDUQfdfMPzUhaGgG70i26Tc0RFWnrC-VyZx9c0sRHnAd1sEDdx1M1AVVGvQG_cJ_yn6Met8CjjSoPlnklbVkTia_8QWQd2gL2ezBdUGmKgRIemkG4y_9TDOzxG3ck-oL1IcfXz6muqusbp5xvGRSB_mLbKhjDx-i4KvuHvKIXqjg698RyCvMXSwa-Xo4y9jGBRZuJT_ZeVplUpsUS3XuaVjB-mCAaIphujIm_igOc8FDShjAmWbapN3tljLZ0LE-FkNBq2ZaXdopqt9bsz1E62me4qtpa7kSfDRtkETs4FQMgja_ZR5xP94HYLcW0HxFVaDGjYKOD4Um3Jk-_VrPXUl5hymwzAJOTD6aboYVfIewbmaUml10uTDpchMK1BnhUmaU_35=w1221-h915-no" height="250">
-            <img src="https://uc7c7a91de2636e8979cd5678a34.previews.dropboxusercontent.com/p/thumb/AAqVveTWFkD0zgLcnk07QRGFxCtW4Y1aWCA3lrEkRoRwSVKrz2RkLwhtDKOIVRGWy6hcPwIJ4kMo40p8C3XpVIU-NL4pfZu-ANhUOg1kTZ1Tze2qBTOBjqVX1uZy8YQ4huPW5EfXMDGZ1tNVRKOoBw7s8ZABl2YJBuHQwtCjtfcoiCRFlpvKEJ1QxOOsdm_2e4P0fD5JMFdyVVLSvFbaHORsnoBvBFzy4VkaryBk75okbEkwTjR9Rsok4MOOaezAiCRXl5sjmPYgchp9gNHp5bnPAhdqsa6BAm7AAcyoW8C_3bu9jDpk2uioGRsfJkmZHfJqrRutA9L5zJaA8kOC1NhkPf527QcjEj3OQuDzbpghs8o-KeXyTfuHUbYJtP39Mbgrd8ChtmF4krYtTb19rAhbSgoURD2UQXsl3zsnFqxRqgKb1mrafgeu9CG14PJKGzyMwjQv6sCuiR8puGcd8Wt4IZSMQ0miGjXGYfzaACvpJQ/p.jpeg?size=178x178&size_mode=1" height="250">
             <img src="tl1.jpeg" height="250">
             <img src="tl2.jpeg" height="250">
             <img src="tl3.jpeg" height="250">
@@ -143,7 +142,7 @@ h1, h2, h3, h4, h5, h6 {
     </div>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="https://uc3c547253e3330446815e5fe00b.previews.dropboxusercontent.com/p/thumb/AAr61_DUMlaSlQQSFDy6eHIvmng6uxSHkHOZB_W3NvmTieYqSpHSxFGdYiRaTWFvKF1WpXBp7FfuUmnwEoEJ4G_XtVX8SyBSXBlPbdneTStIaGwCvZ99kIN1zHYKbZigY4dtjP_aN18EVPUFjQ01BpZ1kurLXAOpCknjGn_IzG_ZocvvK-XiIbElYI7qLCzNFnmuOZHR03bXpFYPoxxwHfkrMrHIebUQYTOFWFmS73J9c1G23ZbCVBYl1kA1JWynffoKbkbHsVN99_mHXen_lX0M-Xd_NTIPFiFS76zETCJ7p6c8FxFNC0dpVTt5xJVCZsFSTsA6YpOvYvGQpvMOXYHFuucn-ixDCH21-qW4Mw_Vssg_iyOrtmJUZz2NH5md3pG6D-idqdeYERo4jomwFNRcljOgI45OAlnzptPYftRVbXVHYKyulYai0q8RI64siUdlWEkrI-EXoOg7msUvMNtPRrzabN93XpxqJFAk9S3U9Q/p.jpeg?fv_content=true&size_mode=5" alt="about" style="width:100%">
+      <img src="tl.jpeg" style="width:100%">
     </div>
   </div>
 
