--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ h1, h2, h3, h4, h5, h6 {
             <img src="tl1.jpeg" height="250">
             <img src="tl2.jpeg" height="250">
             <img src="tl3.jpeg" height="250">
+            <img src="tlc.jpeg height="250">
             <img src="tl4.jpeg" height="250">
             <img src="tl5.jpeg" height="250">
             <img src="tl6.jpeg" height="250">
