--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ h1, h2, h3, h4, h5, h6 {
   <!-- mission Section -->
   <div class="w3-row w3-padding-64" id="mission">   
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="https://mail.google.com/mail/u/0?ui=2&ik=19d7896b6f&attid=0.1&permmsgid=msg-f:1655559316148828362&th=16f9ba6d2fa3b8ca&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ9uw5_dp0ZU5zn4QH6-T0Y65yQ28fZ96UNUZDX6s4l5GhyYPu4EOFpRXgf8F4L1ZjBzVYel4Om1DNz6jv4WvhnLtzy8GKJ4xWn_iQgyelt-BMbpllWLFuLhbx8&disp=emb&realattid=16f9ba6337f81850d221 width="500" height="600">
+     <img src="church.png" width="500" height="600">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
