--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ h1, h2, h3, h4, h5, h6 {
 
     
     <p class="w3-text-blue-grey w3-large"><b>121 Waldo St, Providence RI 02907</b></p>
+    <p>Click <a href="https://www.facebook.com/TOLCOGRI/" target="_blank">here<a/> to visit our Facebook page to stay updatesd on TBL events and services</p>
     <p>You can also contact us by phone (401) 572-6224 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
       
    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
