--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ h1, h2, h3, h4, h5, h6 {
 
     
     <p class="w3-text-blue-grey w3-large"><b>121 Waldo St, Providence RI 02907</b></p>
+    <p>Join our prayer line 401-214-0023, Mon - Fri 11:00am - 12:00pm and 8:00pm - 9:00pm. Use confrenece code <strong>752183</strong></p>
     <p>Click <a href="https://www.facebook.com/TOLCOGRI/" target="_blank">here<a/> to visit our Facebook page to stay updatesd on TBL events and services</p>
     <p>You can also contact us by phone (401) 572-6224 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
       
