--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ h1, h2, h3, h4, h5, h6 {
     <a href="#home" class="w3-bar-item w3-button"> <img src="logo.png.jpg" width="30"> TABERNACLE DE LUMIERE <span class="w3-text-grey">Pastor Lemeck Louis</span></a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="https://www.facebook.com/Tabernacle-of-Light-Church-of-God-Youth-106964088335981" class="w3-bar-item w3-button">Youth</a>
       <a href="#mission" class="w3-bar-item w3-button">Mission</a>
       <a href="#service" class="w3-bar-item w3-button">Service</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
