--- a/index.html
+++ b/index.html
@@ -160,8 +160,10 @@ h1, h2, h3, h4, h5, h6 {
     <p>Join our prayer line <strong>401-214-0023</strong>, <br>Mon - Fri 11:00am - 12:00pm and 8:00pm - 9:00pm<br>Wed 10:00am - 12:00pm <br>Use confrenece code <strong>752183</strong></p>
     <p>Click <a href="https://www.facebook.com/TOLCOGRI/" target="_blank">here<a/> to visit our Facebook page to stay updatesd on TBL events and services</p>
     <p>You can also contact us by phone (401) 572-6224 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
-      
-   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+
+
+<button class="tithely-give-button" data-form="7a86dc3b-d6b9-4a22-a28d-34adcd3a2c4d" style="background-color: #00DB72; font-family: inherit; font-weight: bold; font-size: 19px; padding: 15px 70px; border-radius: 4px; cursor: pointer; background-image: none; color: white; text-shadow: none; display: inline-block; float: none; border: none;">Give</button><script src="https://static.tithely.com/give/give.js" defer></script>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="JQRFVWXK84XXY" />
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
