--- a/index.html
+++ b/index.html
@@ -161,15 +161,35 @@ h1, h2, h3, h4, h5, h6 {
     <p>Click <a href="https://www.facebook.com/TOLCOGRI/" target="_blank">here<a/> to visit our Facebook page to stay updatesd on TBL events and services</p>
     <p>You can also contact us by phone (401) 572-6224 or email <a href ="mailto: tabernaclelight@gmail.com"> tabernaclelight@gmail.com.</a></p>
 
-
-<button class="tithely-give-button" data-form="7a86dc3b-d6b9-4a22-a28d-34adcd3a2c4d" style="background-color: #00DB72; font-family: inherit; font-weight: bold; font-size: 19px; padding: 15px 70px; border-radius: 4px; cursor: pointer; background-image: none; color: white; text-shadow: none; display: inline-block; float: none; border: none;">Give</button><script src="https://static.tithely.com/give/give.js" defer></script>
+<button class="tithely-give-button" 
+        data-form="7a86dc3b-d6b9-4a22-a28d-34adcd3a2c4d" 
+        style="
+            background-color: #006837; 
+            font-family: 'Open Sans', sans-serif; 
+            font-weight: bold; 
+            font-size: 16px; 
+            padding: 10px 50px; 
+            border-radius: 8px; 
+            cursor: pointer; 
+            color: white; 
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); 
+            display: inline-block; 
+            border: 2px solid #004b27; 
+            transition: all 0.3s ease;
+        " 
+        onmouseover="this.style.backgroundColor='#004b27'; this.style.color='#d4ffdb';" 
+        onmouseout="this.style.backgroundColor='#006837'; this.style.color='white';">
+    Donate
+</button>
+<script src="https://static.tithely.com/give/give.js" defer></script>
+<!--
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="JQRFVWXK84XXY" />
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
 </form>
-
+-->
   </div>
   
 <!-- End page content -->
